# german2swiss

./: Readme.md  pyproject.toml  swiss_vocab.pickle  translate.py  trial.ipynb
tests/: test_german2swiss.py
